# eqcctpro

./: README.md  cleanup.sh  environment.yml  eqcctplus.py  eqcctpro.py  predictor.py  predictor_class.py  pyproject.toml  setup.py  test.py
csv/: best_overall_usecase_cpu.csv  best_overall_usecase_gpu.csv  cpu_test_results.csv  gpu_test_results.csv  optimal_configurations_cpu.csv  optimal_configurations_gpu.csv
mseed/20241215T115800Z_20241215T120100Z/AT01/: 4O.AT01.00.HHN__20241215T115800Z__20241215T120100Z.mseed  4O.AT01.00.HHZ__20241215T115800Z__20241215T120100Z.mseed
mseed/20241215T115800Z_20241215T120100Z/BB01/: 4O.BB01.00.HHE__20241215T115800Z__20241215T120100Z.mseed
mseed/20241215T115800Z_20241215T120100Z/BP01/: 4O.BP01..HHE__20241215T115800Z__20241215T120100Z.mseed  4O.BP01..HHZ__20241215T115800Z__20241215T120100Z.mseed
mseed/20241215T115800Z_20241215T120100Z/CF01/: 4O.CF01.00.HHE__20241215T115800Z__20241215T120100Z.mseed  4O.CF01.00.HHZ__20241215T115800Z__20241215T120100Z.mseed
mseed/20241215T115800Z_20241215T120100Z/DB02/: 4O.DB02..HHE__20241215T115800Z__20241215T120100Z.mseed
mseed/20241215T115800Z_20241215T120100Z/DG05/: TX.DG05.00.CHZ__20241215T115800Z__20241215T120100Z.mseed
mseed/20241215T115800Z_20241215T120100Z/EF02/: TX.EF02.00.HHN__20241215T115800Z__20241215T120100Z.mseed  TX.EF02.00.HHZ__20241215T115800Z__20241215T120100Z.mseed
mseed/20241215T115800Z_20241215T120100Z/EF54/: 2T.EF54.00.HHZ__20241215T115800Z__20241215T120100Z.mseed
mseed/20241215T115800Z_20241215T120100Z/EF63/: 2T.EF63.00.HHN__20241215T115800Z__20241215T120100Z.mseed
(+137 files in other folders)
