[project]
name = "eqcctplus"
authors = [
    {name = "Constantinos Skevoiflax", email = "constantinos.skevofilax@austin.utexas.edu"}, 
    {name = "Victor Sallez, email = "victor.salles@beg.utexas.edu"},
    {name = "Camilo Eduardo Munoz, email = "camilo.munoz@beg.utexas.edu"}
    {name = "Nikolaos Bakirtzis, email = "nikolaos.bakirtzis@beg.utexas.edu"}]
description = "Python package that enables the utilization of EQCCT (EarthQuake Compact Convolutional Transformer) to generate picks on seismic waveform data" 
readme = "README.md"
version = "0.0.1"
requires-python =">=3.10.14"
dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "matplotlib>=3.8.4",
    "obspy>=1.4.1",
    "psutil>=6.1.0",
    "ray>=2.40.0",
    "schedule>=1.2.2",
    "sdnotify>=0.3.2",
    "tensorflow>=2.15.1",
    "tensorflow-estimator>=2.15.0",
    "tensorflow-io-gcs-filesystem>=0.37.1",
    "tensorboard>=2.15.2",
    "tensorboard-data-server>=0.7.2",
    "silence-tensorflow>=1.2.2"
]